Sistema de cadastro e login

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@
 <body class="bg-success">
 
   <main class="container-fluid text-center">
-    <form method="POST" action="./banco_dados.php" class=" mt-5" style="padding: 10rem;">
+    <form method="POST" action="./bancoDados.php" class=" mt-5" style="padding: 10rem;">
         <ol class="container">
             <ul class="pt-5">
                 <h2 class="text-light">Opções de Desenvolvedor</h2>
