Finalização da página bancos e corretoras

--- a/dev/index.html
+++ b/dev/index.html
@@ -15,6 +15,13 @@
 
 <body class="bg-success">
 
+    <header class="container-fluid mt-2">
+
+        <a href="../index.php" class="btn btn-close bg-light"></a>
+        <a href="../index.php" class="text-light" style="text-decoration: none;">Fechar</a>
+
+    </header>
+
   <main class="container-fluid text-center">
     <form method="POST" action="./bancoDados.php" class=" mt-5" style="padding: 10rem;">
         <ol class="container">
@@ -26,9 +33,6 @@
             </ul>
             <ul class="pt-1">
                 <input type="submit" class="btn btn-warning btn-lg container-fluid" name="excluirBancoDados" value="Excluir Banco de Dados">
-            </ul>
-            <ul class="pt-5">
-                <a class="btn btn-light btn-lg fixed-bottom" href="../index.php"><h5>Voltar</h5></a>
             </ul>
         </ol>
     </form>
